ops/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weave-frontend
  namespace: weave
  labels:
    app: weave-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weave-frontend
  template:
    metadata:
      labels:
        app: weave-frontend
    spec:
      containers:
        - name: weave-frontend
          image: krishanand01/weave-frontend:v1
          ports:
            - containerPort: 80
          volumeMounts:
            - name: env-file
              mountPath: /app/.env
              subPath: env
      volumes:
        - name: env-file
          secret:
            secretName: weave-frontend-env
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weave-backend
  namespace: weave
  labels:
    app: weave-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weave-backend
  template:
    metadata:
      labels:
        app: weave-backend
    spec:
      containers:
        - name: weave-backend
          image: krishanand01/weave-backend:v1
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: env-file
              mountPath: /app/apps/backend/.env
              subPath: env
      volumes:
        - name: env-file
          secret:
            secretName: weave-backend-env

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weave-worker
  namespace: weave
  labels:
    app: weave-merger-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weave-merger-worker
  template:
    metadata:
      labels:
        app: weave-merger-worker
    spec:
      containers:
        - name: weave-merger-worker
          image: krishanand01/weave-merger-worker:v1
          volumeMounts:
            - name: env-file
              mountPath: /app/apps/merger-worker/.env
              subPath: env
            - name: merger-worker-storage
              mountPath: /app/recordings
      volumes:
        - name: env-file
          secret:
            secretName: weave-merger-worker-env
        - name: merger-worker-storage
          emptyDir:
            sizeLimit: 20Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weave-editor-worker
  namespace: weave
  labels:
    app: weave-editor-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weave-editor-worker
  template:
    metadata:
      labels:
        app: weave-editor-worker
    spec:
      containers:
        - name: weave-editor-worker
          image: krishanand01/weave-editor-worker:v1.1
          volumeMounts:
            - name: env-file
              mountPath: /app/apps/editor-worker/.env
              subPath: env
            - name: editor-worker-storage
              mountPath: /app/recordings
      volumes:
        - name: env-file
          secret:
            secretName: weave-editor-worker-env
        - name: editor-worker-storage
          emptyDir:
            sizeLimit: 20Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weave-transcoder
  namespace: weave
  labels:
    app: weave-transcoder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weave-transcoder
  template:
    metadata:
      labels:
        app: weave-transcoder
    spec:
      containers:
        - name: weave-transcoder
          image: krishanand01/weave-transcoder:v1
          volumeMounts:
            - name: env-file
              mountPath: /app/apps/transcoder/.env
              subPath: env
            - name: transcoder-storage
              mountPath: /app/recordings
      volumes:
        - name: env-file
          secret:
            secretName: weave-transcoder-env
        - name: transcoder-storage
          emptyDir:
            sizeLimit: 20Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weave-ws-relayer
  namespace: weave
  labels:
    app: weave-ws-relayer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weave-ws-relayer
  template:
    metadata:
      labels:
        app: weave-ws-relayer
    spec:
      containers:
        - name: weave-ws-relayer
          image: krishanand01/weave-ws-relayer:v1
          ports:
            - containerPort: 9093
          volumeMounts:
            - name: env-file
              mountPath: /app/apps/ws-relayer/.env
              subPath: env
      volumes:
        - name: env-file
          secret:
            secretName: weave-ws-relayer-env
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: weave
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: redis-data
          mountPath: /data
      volumes:
      - name: redis-data
        emptyDir: {}
