ops/argocd-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: argocd-ingress
  namespace: argocd

  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - argocd.krishlabs.tech
      secretName: argocd-tls

  rules:
    - host: argocd.krishlabs.tech

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: argocd-server
                port:
                  number: 443
