ops/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: weave
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"  
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"  
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"   
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP" 
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - weave.krishlabs.tech
      secretName: weave-frontend-tls
    - hosts:
        - api.weave.krishlabs.tech
      secretName: weave-backend-tls
    - hosts:
        - wss.weave.krishlabs.tech
      secretName: weave-ws-relayer-tls

  rules:
    - host: weave.krishlabs.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weave-frontend
                port:
                  number: 80

    - host: api.weave.krishlabs.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weave-backend
                port:
                  number: 80

    - host: wss.weave.krishlabs.tech
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: weave-ws-relayer
              port:
                number: 80
---
